# ensembl-analysis

./: .gitignore  .travis.yml  LICENSE  README.md  cpanfile  genblast_slice_36Yppdb  perltidyrc  pull_request_template.md  q  requirements.txt  requirements_p36_ncrna.txt  runnable_config.pm  test.txt  tidyallrc
docs/: assembly_loading.txt
modules/: bam2genes_analysis.conf  bam2genes_analysis.conf~  bam2genes_rules.conf  exonerate_analysis.conf  exonerate_rules.conf
modules/python/: ProcessGCApython.py
modules/t/: MultiTestDB.conf  MultiTestDB.conf.default  MultiTestDB.conf.example  asm_loading.t  basic.t  blasts.t  cdna2genomefilter_t.t  cleanutrs_rb.t  filter_t.t  geneutils.t  hiveaddanalysis_rb.t  hiveaddanalysis_rb.t_bak  hiveassemblycomponents_rb.t  hivecreatedatabase_rb.t  hivecreatedirectories_rb.t  (+13 more)
scripts/: analysis.descriptions.txt  chunk_fasta_file.pl  clean_polyT_fastq.pl  clone_database.ksh  delete_big_dir.pl  find_and_remove_duplicates.pl  find_seq_in_fasta.pl  get_sample_genes.pl  load_analysis_descriptions.pl  load_ditags.pl  make_input_id_4_seleno.pl  recalculate_exon_phases.pl  remove_messy_tags.pl  seleno_placements.pl  sequence_dump.pl  ship_rnaseq_merge_files_to_production.sh  stable_id_mapping.pl  test_RunnableDB  test_cluster.t  update_assembly_name.pl  update_assembly_registry.pl
scripts/genebuild/braker/: .python-version  parse_gtf.pl  process_braker_gtf.py  pyproject.toml  requirements_braker.txt  stable_id_convert.pl
sql/: repeat_db_tables.sql
t/: 01perltidy.t  blasts.t  perltidy.t
travisci/: MultiTestDB.conf.mysql  harness.sh
(+1156 files in other folders)
