[tool.poetry]
name = "braker"
version = "0.1.0"
description = ""
authors = ["Francesca Tricomi <ftricomi@ebi.ac.uk>"]

[tool.poetry.dependencies]
python = "^3.8"
gtfparse = "^1.2.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
